--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -3,7 +3,9 @@ import TagBadge from "../../components/tag-badge.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../../consts";
 import Layout from "../../layouts/Layout.astro";
 
-const posts = await Astro.glob("../../content/posts/*.md");
+const posts = await Astro.glob("../../content/posts/*.mdx");
+console.log("posts", posts);
+
 const publishedPosts = posts.filter(
   (post) => post.frontmatter.status === "published",
 );
