added minor changes

--- a/src/components/blog-card.astro
+++ b/src/components/blog-card.astro
@@ -1,11 +1,21 @@
 ---
-import { formatDate } from "../lib/utils";
+import { formatDate, isLocalEnv } from "../lib";
 
 const { post } = Astro.props;
+
+export const showDraft = (isLocal: boolean, status: string) =>
+  isLocal && status === "draft";
 ---
 
 <a href={`/posts/${post.slug}`} class="group flex justify-between gap-3">
-  <span class="group-hover:underline">{post.data.title}</span>
+  <span class="group-hover:underline">
+    {post.data.title}
+    {
+      showDraft(isLocalEnv(Astro.url.hostname), post.data.status) && (
+        <span class="text-xs text-zinc-600 underline">(Draft)</span>
+      )
+    }
+  </span>
   <span class="text-nowrap text-zinc-500">
     {formatDate(post.data.date)}
   </span>
