--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import { ViewTransitions } from "astro:transitions";
 import Header from "../components/header.astro";
-import { cn } from "../lib/utils";
+import { cn } from "../lib";
 import "../styles/global.css";
 
 interface Props {
