--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -2,7 +2,7 @@
 import { type CollectionEntry, getCollection } from "astro:content";
 import TagBadge from "../../components/tag-badge.astro";
 import Layout from "../../layouts/Layout.astro";
-import { formatDate } from "../../lib/utils";
+import { formatDate } from "../../lib";
 
 export async function getStaticPaths() {
   const posts = await getCollection("posts");
