--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -5,13 +5,19 @@ import Layout from "../../layouts/Layout.astro";
 import { formatDate } from "../../lib";
 
 export async function getStaticPaths() {
-  const posts = await getCollection("posts");
-  return posts
-    .filter((post) => post.data.status === "published")
-    .map((post) => ({
-      params: { slug: post.slug },
-      props: post,
-    }));
+  const isDev = import.meta.env.DEV;
+  const allPosts = await getCollection("posts");
+
+  // show only published posts in production
+  let filteredPosts = allPosts;
+  if (!isDev) {
+    filteredPosts = allPosts.filter((post) => post.data.status === "published");
+  }
+
+  return filteredPosts.map((post) => ({
+    params: { slug: post.slug },
+    props: post,
+  }));
 }
 type Props = CollectionEntry<"posts">;
 
@@ -27,6 +33,11 @@ const { Content } = await post.render();
   <main>
     <h1 class="mb-5 text-xl font-medium">
       {post.data.title}
+      {
+        post.data.status === "draft" && (
+          <span class="text-sm font-light text-zinc-500">(Draft)</span>
+        )
+      }
     </h1>
     <div class="mb-3 flex flex-wrap gap-2">
       {post.data.tags.map((tag) => <TagBadge tag={tag} />)}
